version/0.4/_sources/api/ansys/tools/common/exceptions/index.rst.txt






The ``exceptions.py`` module
============================

.. py:module:: ansys.tools.common.exceptions


Summary
-------








.. py:currentmodule:: exceptions
.. tab-set::






    .. tab-item:: Exceptions

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~ansys.tools.common.exceptions.AnsysError`
            - Base class for all exceptions raised by the Ansys API.


          * - :py:obj:`~ansys.tools.common.exceptions.ProductInstanceError`
            - Custom exception for ProductInstance lifecycle errors.


          * - :py:obj:`~ansys.tools.common.exceptions.AnsysHostnameValueError`
            - Error raised when hostname value is not valid.


          * - :py:obj:`~ansys.tools.common.exceptions.AnsysPortValueError`
            - Error raised when port value is not valid.


          * - :py:obj:`~ansys.tools.common.exceptions.AnsysTypeError`
            - Error raised when an argument is of the wrong type.


          * - :py:obj:`~ansys.tools.common.exceptions.AnsysLogicError`
            - Exception raised when an unexpected logical condition occurs.


          * - :py:obj:`~ansys.tools.common.exceptions.VersionSyntaxError`
            - An exception raised when an invalid version syntax is found.


          * - :py:obj:`~ansys.tools.common.exceptions.VersionError`
            - An exception raised when a version is not valid.












.. toctree::
   :titlesonly:
   :maxdepth: 1
   :hidden:

    <span class="nf nf-md-lightning_bolt"></span> AnsysError</api/ansys/tools/common/exceptions/AnsysError>
    <span class="nf nf-md-lightning_bolt"></span> ProductInstanceError</api/ansys/tools/common/exceptions/ProductInstanceError>
    <span class="nf nf-md-lightning_bolt"></span> AnsysHostnameValueError</api/ansys/tools/common/exceptions/AnsysHostnameValueError>
    <span class="nf nf-md-lightning_bolt"></span> AnsysPortValueError</api/ansys/tools/common/exceptions/AnsysPortValueError>
    <span class="nf nf-md-lightning_bolt"></span> AnsysTypeError</api/ansys/tools/common/exceptions/AnsysTypeError>
    <span class="nf nf-md-lightning_bolt"></span> AnsysLogicError</api/ansys/tools/common/exceptions/AnsysLogicError>
    <span class="nf nf-md-lightning_bolt"></span> VersionSyntaxError</api/ansys/tools/common/exceptions/VersionSyntaxError>
    <span class="nf nf-md-lightning_bolt"></span> VersionError</api/ansys/tools/common/exceptions/VersionError>







Description
-----------

Exceptions module.








